2011-11-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/include/rtems/rtems/event.h: Revert parameter name change.

2011-11-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1924/cpukit
	* sapi/include/rtems/config.h: New fields stack_space_size,
	unified_work_area, and stack_allocator_avoids_work_space in
	rtems_configuration_table.
	* sapi/include/confdefs.h: Removed rtems_unified_work_area (this is
	now part of the Configuration).  Separate work space and stack space
	estimate.  Added CONFIGURE_TASK_STACK_ALLOCATOR_AVOIDS_WORK_SPACE
	configuration option.
	* libmisc/shell/main_wkspaceinfo.c, score/src/wkspace.c,
	libcsupport/src/malloc_initialize.c: Update due to API changes.

2011-11-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/include/rtems/rtems/event.h,
	rtems/include/rtems/rtems/eventset.h,
	rtems/inline/rtems/rtems/eventset.inl: Documentation.

2011-11-07	Ralf Corsepius <ralf.corsepius@rtems.org>

	PR 1952/cpukit
	* libmisc/untar/untar.c: Add return code for failure when unable to
	write file.

2011-11-06      Ralf Corsépius <ralf.corsepius@rtems.org>

	PR1945/cpukit
	* libcsupport/include/rtems/libio.h: Mark rtems_off64_t as
	deprecated.
	Replace rtems_off64_t with off_t.
	* libfs/src/defaults/default_ftruncate.c, 
	libfs/src/defaults/default_lseek.c:
	Replace rtems_off64_t with off_t.
	* libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_dir.c,
	libfs/src/dosfs/msdos_file.c: Replace rtems_off64_t with off_t.
	* libfs/src/imfs/deviceio.c, libfs/src/imfs/imfs.h,
	libfs/src/imfs/imfs_directory.c, libfs/src/imfs/imfs_fifo.c,
	libfs/src/imfs/memfile.c: Replace rtems_off64_t with off_t.
	* libfs/src/nfsclient/src/nfs.c, libfs/src/rfs/rtems-rfs-rtems-dev.c,
	libfs/src/rfs/rtems-rfs-rtems-dir.c,
	libfs/src/rfs/rtems-rfs-rtems-file.c, libnetworking/lib/ftpfs.c,
	libnetworking/lib/tftpDriver.c: Replace rtems_off64_t with off_t.

2011-11-06      Ralf Corsépius <ralf.corsepius@rtems.org>
